syntax = "proto3";

package proto;
option go_package = "pastebin/proto";

message GetBinsRequest {}

message Bin {
    int64 Timestamp = 1;
    string Title = 2;
    string Content = 3;
}

message GetBinsReply {
    repeated Bin Data = 1;
}

message NewBinRequest {
    string Title = 1;
    string Content = 2;
}

message NewBinResponse {
    int32 Status = 1;
}

service PasteBin {
    rpc GetBins (GetBinsRequest) returns (GetBinsReply) {}
    rpc NewBin (NewBinRequest) returns (NewBinResponse) {}
}